adding compatibility with https://audiobookshelf.org
